add declarative code example

--- a/deck.mdx
+++ b/deck.mdx
@@ -14,7 +14,8 @@ import {
   classComponent,
   renderingAComponent,
   componentWithState,
-  counterComponent
+  counterComponent,
+  declarativeCode
 } from './codesnippets'
 
 <Head>
@@ -54,9 +55,10 @@ React adalah *library* untuk membuat *user interface*
 ---
 
 ## Declarative
-
 Membuat kode lebih mudah di mengerti dan di-debug
-
+<CodeBlock language="jsx" fontSize="18px">
+{declarativeCode}
+</CodeBlock>
 ---
 
 ## Component Based
