--- a/deck.mdx
+++ b/deck.mdx
@@ -46,6 +46,8 @@ React adalah *library* untuk membuat *user interface*
 
 ---
 
+ReactJS
+
 <Appear>
   <li>Declarative</li>
   <li>Component Based</li>
